--- a/.gitignore
+++ b/.gitignore
@@ -24,3 +24,11 @@ ExportedObj/
 
 # Unity3D Generated File On Crash Reports
 sysinfo.txt
+CivilAge/Library/metadata/
+CivilAge/Library/AssetServerCacheV3
+CivilAge/Library/BuildSettings.asset
+CivilAge/ProjectSettings/EditorSettings.asset
+CivilAge/Library/EditorUserBuildSettings.asset
+CivilAge/Library/EditorUserSettings.asset
+CivilAge/ProjectSettings/EditorBuildSettings.asset
+CivilAge/Temp/UnityLockfile
